# prime

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ff_upd.sh  formatafacil_update.sh  prime.cxx
c/: CMakeLists.txt
c/primex_client/: README.md
c/primex_server/: CMakeLists.txt  README.md  main.cxx
python/primex_server/: crywat.py  primex_db_creator.py  primex_server.py  primex_server_wss.py  wsscli.py
web/primex_client/: dashboard.html  headers.html  index.html
web/primex_client/bs_tmpl/: modals.html  signin.html
web/primex_client/css/: formatafacil.css  prime.css
web/primex_client/js/: formatafacil.js  prime.js
web/primex_client/paymode/: index.html
web/primex_client/tmp/: websockets_ex.html
web/primex_client/vue/: checkbox_vuejsdevelopers.vue  hello_stackoverflow.vue
